# electric-scraper

./: .gitignore  DEVELOPMENT.md  DOCS.md  README.md  config-schema.json  electric-scraper-config.json  fastmcp.json  pyproject.toml  scouting.py  scouting_scraper.py  server.py  tests.py  tests_mcp.py  tests_tools.py
scouting/: ddgs.py  image.py  scraper.py
src/: browser.py  config.py  files.py  scraper.py  type_hints.py  validation.py  website.py
src/guide/: 0_INTRO.md  1_BROWSE.md  2_FIELDS.md  3_WAIT.md  4_FILES.md  5_NOTFOUND.md  6_VALIDATE.md
tests/: config.py  scraping.py  tools.py  utils.py  websites.py
